# project-work

./: .gitignore  Admin.cpp  Admin.h  CMakeLists.txt  Computer.cpp  Computer.h  DefaultUser.cpp  DefaultUser.h  ErrorMessage.h  Exeption.cpp  Exeption.h  IUser.h  Interface.cpp  Interface.h  Manager.cpp  Manager.h  MyException.cpp  MyException.h  RepairComputer.cpp  RepairComputer.h  WorkedComputer.cpp  WorkedComputer.h  database.json  main.cpp  main.vcxproj  main.vcxproj.filters  users.txt
